src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__sidekiq@case_4.snap
---
source: src/config/tracing.rs
expression: tracing
---
level = 'debug'
trace-propagation = true
otlp-endpoint = 'https://example.com:1234/'
