src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__tracing@case_02.snap
---
source: src/config/tracing/mod.rs
expression: tracing
---
level = 'info'
format = 'json'
service-name = 'foo'
trace-propagation = true
trace-filters = []
