src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__tracing@case_03.snap
---
source: src/config/tracing/mod.rs
expression: tracing
---
level = 'error'
format = 'pretty'
trace-propagation = false
trace-filters = []
