src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__tracing@case_04.snap
---
source: src/config/tracing/mod.rs
expression: tracing
---
level = 'debug'
format = 'none'
trace-propagation = true
metrics-export-interval = 60000
trace-filters = []
