src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__tracing@case_09.snap
---
source: src/config/tracing/mod.rs
expression: tracing
---
level = 'debug'
format = 'none'
trace-propagation = true
[otlp.metric-endpoint]
protocol = 'http'
url = 'https://example.com:1234/'
