src/config/tracing/snapshots/roadster__config__tracing__deserialize_tests__tracing@case_1.snap
---
source: src/config/tracing/mod.rs
expression: tracing
---
level = 'debug'
format = 'compact'
trace-propagation = true
